loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:10: error: ':' expected but ')' found.
def circle(n) {
            ^LoopCourse:17: error: identifier expected but '}' found.
	}
        ^